# dunepdlegacy

./: CMakeLists.txt  CMakePresets.json  README.md
dunepdlegacy/: CMakeLists.txt
dunepdlegacy/Overlays/: CMakeLists.txt  CMakeLists.txt~  CRTFragment.hh  CTBFragment.cc  CTBFragment.hh  CTB_content.h  FelixCompress.hh  FelixDecode.hh  FelixFragment.hh  FelixReorder.cc  FelixReorder.hh  FelixReordererFacility.hh  FragmentType.cc  FragmentType.hh  Frame14Format.hh  Frame14Fragment.hh  MicroSlice.cc  MicroSlice.hh  MicroSliceWriter.cc  MicroSliceWriter.hh  MilliSlice.cc  MilliSlice.hh  MilliSliceFragment.cc  MilliSliceFragment.hh  MilliSliceFragmentWriter.cc  MilliSliceFragmentWriter.hh  MilliSliceWriter.cc  MilliSliceWriter.hh  NanoSlice.cc  NanoSlice.hh  NanoSliceWriter.cc  NanoSliceWriter.hh  PennMicroSlice.cc  PennMicroSlice.hh  PennMicroSliceWriter.cc  PennMicroSliceWriter.hh  PennMilliSlice.cc  PennMilliSlice.hh  PennMilliSliceFragment.cc  PennMilliSliceFragment.hh  (+16 more)
dunepdlegacy/Services/: CMakeLists.txt
dunepdlegacy/Services/ChannelMap/: CMakeLists.txt  IcebergChannelMapService.fcl  IcebergChannelMapService.h  IcebergChannelMapService_service.cc  IcebergChannelMap_FELIX_FRAME14_v1.txt  IcebergChannelMap_FELIX_v1.txt  IcebergChannelMap_RCE_v1.txt  PdspChannelMapService.fcl  PdspChannelMapService.h  PdspChannelMapService_service.cc  protoDUNESSPChannelMap_v1.txt
dunepdlegacy/Services/ChannelMap/mapmakers/: MakeIcebergChannelMapFrame14_v1.C  MakeIcebergChannelMap_v1.C  MakePdspChannelMap_v3.C  MakePdspChannelMap_v4.C  checkchannelmap.C  femblabel.C  iceberg_notes.txt  sspmapmaker_v1.c
dunepdlegacy/rce/: CMakeLists.txt
dunepdlegacy/rce/dam/: DataFragmentUnpack.hh  HeaderFragmentUnpack.hh  RceFragmentUnpack.hh  TpcAdcVector.hh  TpcFragmentUnpack.hh  TpcStreamAssessor.hh  TpcStreamUnpack.hh
dunepdlegacy/rce/dam/access/: CMakeLists.txt~  Data.hh  DataFragment.hh  Headers.hh  Identifier.hh  Originator.hh  TpcCompressed.hh  TpcCompressed.hh~  TpcFragment.hh  TpcFragment.hh~  TpcPacket.hh  TpcRanges.hh  TpcStream.hh  TpcToc.hh  WibFrame.hh  WibFrame.hh~
dunepdlegacy/rce/dam/records/: Data.hh  DataFragment.hh  Identifier.hh  Originator.hh  TpcCompressed.hh  TpcPacket.hh  TpcRanges.hh  TpcStream.hh  TpcToc.hh  WibFrame.hh
dunepdlegacy/rce/dam/util/: AlignedAllocator.hh  BfExtract.hh
dunepdlegacy/rce/ptd/: CMakeLists.txt  PdEntropy.cc  PdReaderTest.cc  PdWibFrameExtract.cc  PdWibFrameTest.cc  Reader.hh  TpcWindow.hh
dunepdlegacy/rce/src/: AP-Common.h  AP-Decode.cc  CMakeLists.txt  CMakeLists.txt~  Data.cc  DataFragment-Impl.hh  DataFragment.cc  DataFragmentUnpack.cc  HeaderFragmentUnpack.cc  Headers.cc  Histogram-Decode.cc_disabled  Identifier.cc  Originator.cc  RceFragmentUnpack.cc  TpcCompressed-Impl.hh  TpcCompressed.cc  TpcCompressedContext.hh  TpcFragment-Impl.hh  TpcFragment.cc  TpcFragmentUnpack.cc  TpcPacket-Impl.hh  TpcPacket.cc  TpcRanges-Impl.hh  TpcRanges.cc  TpcStream-Impl.hh  TpcStream.cc  TpcStreamAssessor.cc  TpcStreamUnpack.cc  TpcToc-Impl.hh  TpcToc.cc  TpcTrimmedRange.hh  WibFrame-avx.hh  WibFrame-avx2.hh  WibFrame-gen.hh  WibFrame.cc  apdtemplate.h  capabilities.c
run/: CMakeLists.txt  CMakeLists.txt~  FELIXdecode.cc  FELIXdecode.cc~
test/: CMakeLists.txt
test/Overlays/: CMakeLists.txt  CMakeLists.txt~  DUNE_FelixAvxReorder_t.cc  DUNE_FelixDecode_t.cc  DUNE_FelixFragment_t.cc  DUNE_FelixReorder_t.cc  DUNE_MicroSlice_t.cc  DUNE_MilliSliceFragment_t.cc  DUNE_MilliSlice_t.cc  DUNE_NanoSlice_t.cc
ups/: product_deps  product_deps~
